5.0.4

2018-11-28  Hideki SAKAMOTO <hsakamt@tsnr.com>

	* pop3dserver.c: Deal with MS Outlook's broken implementation of
	RFC 6856.

5.0.3

2018-11-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* pop3dserver.c (calcsize): Fix spurious flagging of non-UTF8
	messages as UTF-8.

	To fix existing mailboxes with erroneously-flagged messages. In
	each mailbox, if its existing courierpop3dsizelist file starts with

	/3 [followed by additional data]

	Only if the first line in courierpop3dsizelist starts with /3, then
	execute:

	perl -p -i -e 's/:\d+$/:0/' courierpop3dsizelist

2018-11-16  Sam Varshavchik  <mrsam@courier-mta.com>

	* pop3dserver.c (readpop3dlist): Be able to update
	courierpop3dsizelist from version 2 to 3 in place.
	(do_retr): Instead of returning an ERR to a non-Unicode client,
	handle Unicode messages by wrapping them as an attachment.

5.0.2

2018-10-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* configure.ac: Additional changes to how Unicode messages are
	handled with non-Unicode clients: disclaim all warranties, still
	report an error, but provide the raw message content, as is.

5.0.1

2018-09-26  Sam Varshavchik  <mrsam@courier-mta.com>

	* Provide an substitute message to IMAP clients that did not enable
	UTF-8.

2018-09-24  Sam Varshavchik  <mrsam@courier-mta.com>

	* couriertls: additional fixes.

2018-09-24  Yoshinari Takaoka <mumumu@mumumu.org>

	* couriertls: option to use a separate file for the SSL certificate's
	private key, as an alternative to the combined keyfile+certificate.

5.0.0

2018-07-21  Sam Varshavchik  <mrsam@courier-mta.com>

	* pop3dserver.c: update Courier-IMAP to support UTF8 POP3. Update
	version of the courierpop3dsizelist cache file.

2018-07-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* courier-imap, sqwebmail: update Courier-IMAP to support UTF8 IMAP.
	Convert maildir folders to use UTF-8 for folder names. Add
	--checkutf8 and --convutf8 options to maildirmake to convert