@@ -23,6 +23,7 @@ struct imapscanmessageinfo {
 
 	char storeflag;  /* Used by imap_addRemoveKeywords() */
 
+	char err8bitflag;       /* Invalid 8 bit header error was reported */
 	/* When reading keywords, hash messages by filename */
 
 	struct imapscanmessageinfo *firstBucket, *nextBucket;
@@ -59,7 +60,7 @@ struct uidplus_info {
 
 	unsigned long uid; /* Initialized by imapscan_maildir2 */
 	unsigned long old_uid; /* Initialized by do_copy() */
-	
+
 	time_t mtime;
 } ;
 
